--- a/client/src/css/Registration.css
+++ b/client/src/css/Registration.css
@@ -1,4 +1,4 @@
-.regClass{
+/* .regClass{
     margin-top: 10%;
     margin-left: 30%;
     margin-right: 30%;
@@ -10,4 +10,16 @@
     box-shadow: 0 0 10px #999;
 }
 
-/* do mobile css */
+@media only screen and (max-width: 800px) {
+    .regClass{
+        margin-top: 10%;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-bottom: 10%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        box-shadow: 0 0 10px #999;
+    }
+} */
